--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- PON UN FAVICON!!! -->
-    <link rel="icon" type="image/svg+xml" href="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CAMBIA EL TITLE!!! -->
-    <title>Vite Template</title>
-  </head>
-  <body>
-    <script type="module" src="./js/index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- PON UN FAVICON!!! -->
+  <link rel="icon" type="image/svg+xml" href="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- CAMBIA EL TITLE!!! -->
+  <title>News web</title>
+</head>
+
+<body>
+
+  <header class="header container">
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary border">
+      <div class="container-fluid">
+        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse header__nav" id="navbarNav">
+          <ul class="navbar-nav gap-5">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Economía</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tecnología</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Deportes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Salud</a>
+            </li>
+
+
+          </ul>
+          <ul class="navbar-nav ">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Acceder</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Registro</a>
+            </li>
+            <li class="nav-item hidden">
+              <a class="nav-link" href="#">Mi perfil</a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+
+  </header>
+  <main class="main container">
+
+    <h1 class="main__title">Últimas noticias.....</h1>
+   
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4" id="news-container">
+      
+    </div>
+
+  </main>
+
+  <script type="module" src="./js/index.js"></script>
+</body>
+
 </html>
